# NexTags

./: .env.example  .gitignore  LICENSE  Makefile  PERMISSION_FIX.md  PLAYLIST_CONFIG.md  README.dev.md  README.md  README.prod.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  config.py  config.yaml  entrypoint.sh  main.py  pyproject.toml
backend/app/data/: smart_playlist.example.json  tasks.json
backend/app/dependencies/: database.py  logger.py  lrc_process.py  mp3tag_reader.py  mp3tag_writer.py  redis_cache.py  tags_cache.py  text_process.py
backend/app/dependencies/jellyfin_connetor/: __init__.py  auth.py  example_usage.py  playlists.py  songs.py
backend/app/dependencies/utils/: audio_converter.py  audio_processor.py  cover_art.py  replaygain.py  tag_reader.py
backend/app/router/: audio.py  cache.py  config.py  images.py  jellyfin.py  music_import.py  playlists.py  tags.py  tasks.py  tools.py
backend/app/schemas/: audios.py  music_import.py  playlists.py  tools.py
backend/app/services/: task_manager.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.nginx  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MusicImportTagEditor.tsx  Navbar.tsx  PlaylistEditDialog.tsx  TagEditor.tsx  TaskStatusDialog.tsx
nginx/: nginx.conf
(+47 files in other folders)
